@@ -9,6 +9,7 @@ NDO Utils Changelog
 * Patch situation where db table nagios_logentries has items where `instance_id`,`logentry_time`,`entry_time`,`entry_time_usec` wasn't unique enough (Scott Wilkerson)
 * Fixed table trimming and related config options for notifications, contactnotifications, contactnotificationmethods, logentries and acknowledgements (Eric Mislivec)
 * Fixed Tracker #428: Uninitialized sleep_time in push_into_queue(); cleanup other warnings (Eric Mislivec)
+* Tracker #373: Make the DB trim interval a configurable option (Eric Mislivec)
 
 2.0.0 - 02/28/2014
 ------------------
